
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_BG" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_BG">

        <include layout="@layout/workout_complete_top_nav" />
    </LinearLayout>
    <LinearLayout
        android:background="#00ffffff"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <FrameLayout
            android:background="#00ffffff"
            android:layout_marginTop="62dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp">

            <VideoView
                android:background="#00ffffff"
                android:id="@+id/videoView"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-650dp"
                android:focusable="false"
                android:focusableInTouchMode="false" />

            <com.example.prototype1java.ScorePathView
                android:background="#00ffffff"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="180dp"
                android:layout_marginTop="95dp"
                android:id="@+id/path"
                android:layout_width="match_parent"
                android:layout_height="1300dp" />


            <TextView
                android:background="#00ffffff"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato_light"
                android:text="@string/workout_complete"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="82sp" />

            <LinearLayout
                android:layout_marginTop="-1015dp"
                android:background="#00ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:fontFamily="@font/lato_light">

                <TextView
                    android:background="#00ffffff"
                    android:id="@+id/score_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/lato_light"
                    android:paddingEnd="10dp"
                    android:text="@string/your_fitness_score_20"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    android:textSize="33sp"
                    android:textStyle="bold"/>

                <TextView
                    android:background="#00ffffff"
                    android:id="@+id/score_count"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/lato_light"
                    android:paddingEnd="30dp"
                    android:text="@string/your_score_20"
                    android:textAlignment="viewEnd"
                    android:textColor="#ffcb49"
                    android:textSize="33sp"
                    android:textStyle="bold"/>
            </LinearLayout>


            <TextView
                android:background="#00ffffff"
                android:id="@+id/textinput_counter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="225dp"
                android:fontFamily="@font/lato_light"
                android:text="@string/progressing"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="65sp" />
            <TextView
                android:background="#00ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1265dp"
                android:fontFamily="@font/lato_light"
                android:text="@string/how_do_you_feel_about_your_fitness_journey"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="44sp" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:background="#00ffffff"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="330dp"
        android:layout_marginTop="-850dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp">

        <com.example.prototype1java.ToggleImageButton
            android:id="@+id/discourage_button"
            android:layout_marginTop="1dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:background="@drawable/discourage_button" />

        <com.example.prototype1java.ToggleImageButton
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:id="@+id/bored_button"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:background="@drawable/bored_button" />

        <com.example.prototype1java.ToggleImageButton
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:id="@+id/neutral_button"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:background="@drawable/neutral_button" />

        <com.example.prototype1java.ToggleImageButton
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:id="@+id/motivated_button"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:background="@drawable/motivated_button" />

        <com.example.prototype1java.ToggleImageButton
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:id="@+id/amazing_button"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:background="@drawable/amazing_button" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/continue1"
        android:layout_width="400dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:background="@drawable/btncontinue"
        android:minWidth="350dp" />

    <com.github.mikephil.charting.charts.BarChart
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:id="@+id/my_journey_chart"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:background="@color/purple_BG"/>
</LinearLayout>

